--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,26 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/novetta/jobs/4500193002'>Job Application for Program Manager at Novetta</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://latitudeinc.applytojob.com/apply/pHX11ZiIvv/Project-Manager'>Project Manager - Latitude, Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://latitudeinc.applytojob.com/apply/mxQjQCmfB2/AV-Project-Manager'>AV Project Manager - Latitude, Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/leaseplandigital/jobs/4497558002'>Job Application for Program Manager Digital Transformation at LeasePlan Digital</a></h5> 
+<p><span class="badge badge-light">Amsterdam</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/leaseplandigital/jobs/4497610002'>Job Application for Project Manager Salesforce at LeasePlan Digital</a></h5> 
+<p><span class="badge badge-light">Amsterdam</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://fastec.join.com/jobs/474152-project-manager-m-w-d'>Job @ FASTEC (Paderborn): Project Manager (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -94,7 +114,7 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698473370-technical-project-manager'>McFadyen Digital Technical Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698473370-technical-project-manager'>McFadyen Digital Technical Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -114,7 +134,7 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://careers.nintendo.com/job-openings/listing/19000000A5.html?fbclid=IwAR32h7CD-m2Ctkn1JxlhEySJaFHCrZHgTTyuSaV_GGXlbv-GWACOSCOxvAE'>Assistant Program Manager, Compliance - Careers at Nintendo of America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.nintendo.com/job-openings/listing/19000000A5.html?fbclid=IwAR32h7CD-m2Ctkn1JxlhEySJaFHCrZHgTTyuSaV_GGXlbv-GWACOSCOxvAE'>Assistant Program Manager, Compliance - Careers at Nintendo of America</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -122,7 +142,7 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light">Los Angeles, California  Los Angeles, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/XyantTechnologyInc/743999698689870-project-coordinator-jr-project-manager'>Xyant Technology, Inc. Project Coordinator / Jr Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/XyantTechnologyInc/743999698689870-project-coordinator-jr-project-manager'>Xyant Technology, Inc. Project Coordinator / Jr Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -150,7 +170,7 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://careers.terracon.com/search/jobdetails/construction-materials-project-manager/9013bcbb-3472-4f58-979a-692af608575b'>Construction Materials Project Manager | Lincoln, NE | Terracon</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.terracon.com/search/jobdetails/construction-materials-project-manager/9013bcbb-3472-4f58-979a-692af608575b'>Construction Materials Project Manager | Lincoln, NE | Terracon</a></h5> 
 <p><span class="badge badge-light">Lincoln, NE Lincoln,?  NE</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -306,7 +326,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -346,7 +366,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -374,7 +394,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -408,7 +428,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.edsurge.com/jobs/program-manager-online-and-hybrid-programs-job-at-office-of-academic-innovation-university-of-michigan?utm_content=bufferad16c&utm_medium=social&utm_source=twitter.com&utm_campaign=EdSurgeBuffer'>Program Manager, Online and Hybrid Programs for Center for Academic Innovation, University of Michigan in Ann Arbor, Michigan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.edsurge.com/jobs/program-manager-online-and-hybrid-programs-job-at-office-of-academic-innovation-university-of-michigan?utm_content=bufferad16c&utm_medium=social&utm_source=twitter.com&utm_campaign=EdSurgeBuffer'>Program Manager, Online and Hybrid Programs for Center for Academic Innovation, University of Michigan in Ann Arbor, Michigan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -435,26 +455,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <h5><a href='https://experian.referrals.selectminds.com/jobs/program-manager-14085'>Program Manager - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/chatmeter/e2cd52a3-833e-4f4c-96ac-2ea8c1685d14'>Chatmeter - Project Manager</a></h5> 
-<p><span class="badge badge-light">San Diego, CA  North America</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ou6gbfwL&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=n6wgqMwz&jvi=ou6gbfwL,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/weston/job/oFpqbfwp'>Weston Solutions Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/aptiv-mobility/f1b0036b-11b6-468b-a2db-e17cc8530ec6'>Aptiv-Mobility - Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
